# AdaptMolMAC

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
AdaptMolMAC/: __init__.py  cli.py  config.py
AdaptMolMAC/err/: __init__.py  error_detect.py
AdaptMolMAC/mcutils/: __init__.py  anomaly_detector.py  codebook_generator.py  log.py  plot_utils.py  signal_utils.py
AdaptMolMAC/models/: __init__.py  channel_model.py
AdaptMolMAC/processing/: __init__.py  dynamic_decoder.py  signal_processor.py  sinewave_detector.py  stationary_detector.py
AdaptMolMAC/sim/: MCModel.py  SimBase.py  SimMmoTx.py  __init__.py
AdaptMolMAC/viterbi/: __init__.py  viterbi.py
benchmarks/: __init__.py  multi_transmitter_scaling_benchmark.py  payload_length_robustness_benchmark.py  snr_interval_tradeoff_benchmark.py  tx2_parameter_sensitivity_benchmark.py
docs/: usage.md
examples/: basic_pipeline.py
tests/: __init__.py  test_behavioral_units.py  test_core_utilities.py  test_entrypoints.py  test_integration_workflows.py  test_model_regressions.py  test_package_import.py
